[FLINK-39113][s3] Fix s3.sse.kms.encryption-context config in native s3 connector